# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./conversations";
 export * from "./messages";
 export * from "./tags";
 export * from "./quick-replies";
+export * from "./settings";
